apps/cluster-based/shared/04-prometheus/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-system-monitoring
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: prometheus-server
  name: prometheus-server-httpproxy
  namespace: tanzu-system-monitoring
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: prometheus-server
      port: 80
  virtualhost:
    fqdn: prometheus.shared.h2o-4-1384.h2o.vmware.com
